--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
-    "hono": "^4.12.1"
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
+    "dotenv": "^17.3.1",
+    "hono": "^4.12.1",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
