--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@prisma/client": "^7.4.1",
     "dotenv": "^17.3.1",
     "hono": "^4.12.1",
-    "pg": "^8.18.0"
+    "ioredis": "^5.9.3",
+    "jwt": "^0.2.0",
+    "nodemailer": "^8.0.1",
+    "pg": "^8.18.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^7.0.11",
     "@types/pg": "^8.16.0",
     "prisma": "^7.4.1",
     "tsx": "^4.7.1",
